# bookstore

./: db.sqlite3  pyproject.toml
bookstore/: settings.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
order/Models/: order.py
order/serializers/: order_serializer.py
product/Models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
